Structural edits "done"

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -202,16 +202,13 @@ As a nice example and application, we relate FSVI to training with knowledge dis
 
 ### TL;DR
 
-The following sections summarize the key takeaways of this blog post. If they don't make sense, don't worry! They will after reading this post.
+The following sections summarize the key takeaways of this blog post. If they don't make sense, don't worry: they will after reading this post.
 
 #### Data Processing Inequality
 
-The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information.
-We will also look at different data processing inequalities that relate different distributions instead of different random variables.
+The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will look at different data processing inequalities that relate different distributions instead of different random variables. However, the blog posts in particular looks at the DPI when formulated using Kullback-Leibler divergences (🥬) between distributions.
 
-TK edits needed TK
-
-The DPI states that processing data stochastically can only reduce information. More formally:
+Concretely, this DPI states that processing data stochastically can only reduce information. More formally:
 
 <aside class="l-body box-note" markdown="1">
 Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$. Then the DPI states:
@@ -228,24 +225,29 @@ The paper "*Understanding Variational Inference in Function-Space*" by Burt et a
 The data processing inequality states that if two random variables are transformed in this way, they cannot become easier to tell apart.
 </blockquote>
 
-#### (Function-Space) Variational Inference
+#### Function-Space Variational Inference
 
-Variational inference is a powerful technique for approximating complex Bayesian posteriors with simpler distributions. In its usual form, it optimizes an approximate, *variational* distribution to match the *Bayesian **parameter** posterior* as closely as possible. This way, it transforms the problem of Bayesian inference into an optimization problem.
+Generally, *variational inference* is a powerful technique for approximating complex Bayesian posteriors with simpler distributions. In its usual form, it optimizes an approximate, *variational* distribution to match the *Bayesian **parameter** posterior* as closely as possible. This way, it transforms the problem of Bayesian inference into an optimization problem.
 
-Especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries (different parameter configurations can lead to the same predictions of the model) that are not taken into account either. 
+However, especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries---different parameter configurations can lead to the same predictions of the model---that are not taken into account either. 
 
 **Function-space variational inference (FSVI)** side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*.
 
-TK
 Whereas regular variational inference regularizes towards a parameter prior, FSVI regularizes towards a data prior. This is especially useful when the parameter prior is not very meaningful, e.g. an isotropic Gaussian prior, which is often used in Bayesian neural networks.
 
-FORMULAS NEEDED HERE
+<aside class="l-body box-note" markdown="1">
+In function-space variational inference, we regularize towards a data prior:
 
-TK summary of FSVI TK
+$$
+\begin{align}
+\E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
+\end{align}
+$$
 
-## Background
-<details markdown="1">
-<summary>Information-Theoretic Notation</summary>
+(unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.)
+</aside>
+
+## Background: Information-Theoretic Notation
 
 Information theory deals with the communication of information. In this blog post, we use information-theoretic notation to express various quantities related to probability distributions and their relationships. Here are some key concepts we will use:
 
@@ -272,7 +274,6 @@ $$
 The cross-entropy quantifies the average number of bits needed to encode samples drawn from the true distribution $$\pof{X}$$ using a different distribution $$\qof{X}$$. The Kullback-Leibler divergence is a measure of the difference between two probability distributions and captures the additional bits needed to encode samples from $$\pof{X}$$ compared to encoding them using the true distribution $$\qof{X}$$.
 
 Now that we have refreshed our notation, let's delve into the data processing inequality.
-</details>
 
 ## Data Processing Inequality
 
@@ -285,11 +286,9 @@ $$
 We can view $$\rightarrow$$ as a processing or transition step, that maps $$X$$ to $$Y$$ and $$Y$$ to $$Z$$, whereas the mapping can be deterministic or stochastic. 
 The inequality tells us that processing the random variable $$X$$ to obtain $$Y$$ and further processing $$Y$$ to obtain $$Z$$ cannot increase the mutual information between $$X$$ and $$Z$$ compared to the mutual information between $$X$$ and $$Y$$.
 
-### Example 1
-
 The following three scenarios illustrate the data processing inequality using different mappings.
 
-#### Image Processing Pipeline
+### Example: Image Processing Pipeline
 
 Consider an image processing pipeline with the following steps. Let:
 
@@ -299,7 +298,7 @@ Consider an image processing pipeline with the following steps. Let:
 
 In this case, $$X$$ has more mutual information with $$Y$$ than with $$Z$$. The compression reduces information, but the image is still recognizable. However, after the additional processing of blurring and pixelating, the mutual information between $$X$$ and $$Z$$ is further reduced. This gives an intuitive example of how additional processing on data reduces the mutual information with the original data. Each processing step results in some loss of information.
 
-#### Supervised Learning
+### Example: Supervised Learning
 Consider a supervised learning pipeline with the following steps. Let
 
 * $$X$$ be the input features;
@@ -320,7 +319,7 @@ As a more concrete example, consider an image classification model. Let:
 
 The convolutional layers will extract features from the input images, but cannot extract more information than present in the original images. The predicted labels are obtained by further processing these convolutional features, so may lose some fine-grained information about the original inputs.
 
-#### Autoencoders
+### Example: Autoencoders
 An autoencoder compresses the input $$X$$ into a latent code $$Y$$ and then tries to reconstruct the original input from the code, producing $$\hat{X}$$. Let:
 
 * $$X$$ be the input;
@@ -335,7 +334,7 @@ The latent code $$Y$$ is obtained by compressing $$X$$, so cannot contain more i
 
 Intuitively, autoencoders try to preserve as much mutual information between inputs $$X$$ and reconstructions $$\hat{X}$$ as possible by learning latent representations $$Y$$ that compress inputs without losing too much information. The data processing inequality quantifies this information bottleneck.
 
-### Proof of the Data Processing Inequality
+### Proof of the DPI
 
 The proof is simple and connects the DPI to another important inequality.
 
@@ -404,7 +403,7 @@ $$
 
 Thomas and Cover describe this in their book [Elements of Information Theory](https://www.wiley.com/en-us/Elements+of+Information+Theory%2C+2nd+Edition-p-9780471241959) as "relative entropy never increases" and relate it to the second law of thermodynamics.
 
-### Example 2: Comparing Image Distributions
+### Example: Comparing Image Distributions
 
 As another example, let:
 
@@ -416,7 +415,7 @@ Then $$\pof{y}$$ and $$\qof{y}$$ will be more difficult to distinguish after the
 
 This provides some intuition for why the 🥬 divergence between distributions decreases under a shared stochastic mapping, as formalized by the 🥬 data processing inequality. Processing through $$\fof{y \given x}$$ makes the distributions harder to tell apart.
 
-### Counter-Example 3: Bayesian Inference
+### Counter-Example: Bayesian Inference
 
 It might be inviting to think that this data processing inequality also applies to Bayesian inference (updating the model parameters based on new evidence). Then one could argue that if two agents start with different prior beliefs but update based on the same evidence, their posterior beliefs will become more similar. However, this intuition is flawed: the data processing inequality does not apply to Bayesian inference.
 Let's walk through why.
@@ -444,7 +443,7 @@ This counterexample highlights the importance of precisely understanding the ass
 Identifying counterexamples sharpens our comprehension of the true meanings and limitations of information-theoretic inequalities.
 </aside>
 
-### Proofs of the 🥬 Data Processing Inequality
+### Proofs of the 🥬 DPI
 
 We will prove this inequality in two different ways. First, we will develop a "brute-force" proof, and then we will look at a more elegant proof that follows Thomas and Cover. Importantly, we will also consider the equality case in detail.
 
@@ -581,7 +580,7 @@ $$
 \forall y, \pof{y} \not= 0 \exists C_y \in \mathbb{R}_{> 0} \forall x, \fof{y \given x}\not=0\colon \pof{x} = C_y \, \qof{x}.
 $$
 
-## Revisiting Data Processing Inequalities
+## Other Data Processing Inequalities
 
 Now, we can use this to derive a few additional results and also to close the circle to the original data processing inequality.
 
@@ -602,7 +601,7 @@ Similar approaches can be used to "symmetrize" other concepts; for example matri
 
 The square root of the Jensen-Shannon divergence is symmetric and satisfies the triangle inequality---it is a metric: the *Jensen-Shannon distance*.
 
-### The JSD Data Processing Inequality
+### JSD-DPI
 
 We can also obtain a data processing inequality for the Jensen-Shannon divergence and the Jensen-Shannon distance:
 
@@ -705,19 +704,15 @@ This is exactly when $$X$$ is independent of $$Z$$ given $$Y$$. (Then $$Y$$ is a
 
 **Summary.** We have shown that we can derive the data processing inequality using the 🥬 data processing inequality.
 
-## Conclusion
+## Function-Space Variational Inference
 
-In this blog post, we explored the data processing inequality and its applications in information theory. Specifically, we discussed both the original data processing inequality and the 🥬 data processing inequality. We provided derivations and explanations for these inequalities, emphasizing their significance and limitations.
+So far, we explored the data processing inequality and its applications in information theory. 
 
-While the data processing inequality provides valuable insights into information dynamics in various scenarios, it is crucial to consider the specific assumptions and conditions under which it holds. The examples and counterexample hopefully demonstrate the nuances of applying these inequalities in different contexts.
+Specifically, we provided derivations and explanations for both the original data processing inequality as well as the 🥬 data processing inequality and related DPIs, emphasizing their significance and limitations. The examples and counterexample hopefully demonstrate the nuances of applying these inequalities in different contexts.
 
-By understanding the foundations and limitations of the data processing inequality, we can leverage its insights effectively in information theory and related fields.
+By understanding the foundations and limitations of the data processing inequality, we can leverage its insights to understand function-space variational inference.
 
----
-
- 
-
-## Problem Setting & Notation
+### Problem Setting & Notation
 
 In the following, I assume a classification task with cross-entropy loss. This post uses the following notation:
 
@@ -734,7 +729,7 @@ $$\pof{\y, \w \given \x} = \pof{\y \given \x, \w} \, \pof{\w}.$$
 Note that I drop conditioning on $$\x$$ for simplicity, and also note, that I use upper-case letters for random variables, I'm taking an expectation over in some form, e.g.\ the 🥬 divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $$\Dany$$).
 
 
-## Chain Rule of the 🥬 Divergence & DPI
+### Chain Rule of the 🥬 Divergence & DPI
 
 An important property of the 🥬 divergence is the chain rule:
 
@@ -753,7 +748,7 @@ $$
 \end{align}
 $$
 
-# Function-Space Variational Inference
+### Deriving the Functional ELBO
 
 The DPI has an intriguing connection to FSVI. Let's say we want to approximate a Bayesian posterior $$\pof{\w \given \Dany}$$ with a variational distribution $$\qof{\w}$$. In standard VI, we would minimize $$\Kale{\qof{\W}}{\pof{\W \given \Dany}}$$ to match the variational distribution to the Bayesian posterior. Specifically:
 
@@ -795,7 +790,7 @@ $$
 
 is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational Bayesian neural networks*" by Sun et al. (2019)<d-cite key="sun2019functional"></d-cite>---with caveats that we discuss below.
 
-## Choosing $$\x...$$
+### Choosing the "coreset" $$\x...$$
 
 One important detail is the question of how to choose the $$\x...$$:
 
@@ -816,7 +811,7 @@ Focusing on the most important aspect of FSVI, we observe:
 Instead of a parameter prior (term) $$\Kale{\qof{\W}}{\pof{\W}}$$, we have a functional or *predictive* prior (term) $$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$.
 </aside>
 
-## Continual Learning 
+### Application to Continual Learning 
 
 When we directly optimize the 🥬 divergence on the finite input dataset, for example, we align $$\opq$$ with the prior of $$\opp$$ where it matters most: on the predictions of the observed data.
 
@@ -824,7 +819,7 @@ This is of particular interest in continual learning, where the prior for the ne
 
 For two great papers that are very readable and provide further insights, see "*Continual learning via sequential function-space variational inference*"<d-cite key="rudner2022continual"></d-cite> and "*Tractable function-space variational inference in Bayesian neural networks*"<d-cite key="rudner2022tractable"></d-cite>, both by Rudner et al. (2022).
 
-## Comparison to FSVI in the literature
+## Comparison to FSVI in the Literature
 
 <aside class="l-body box-error" markdown="1">
 An important detail is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
@@ -880,7 +875,7 @@ In practice, using the probabilities instead of logits when performing lineariza
 
 Conceptually, this explains the derivation of their ELBO objective and also relates them to the 'purer' and simpler functional evidence bound derived above, but this raises the question of how these different inequalities are different and what the gap between them tells us. We will address this question in the next section.
 
-# The Equality Case and Equivalence Classes
+## The Equality Case and Equivalence Classes
 
 When do we have $$\Kale{\qof{\W}}{\pof{\W}} = \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$? And what does it tell us?
 As we have seen in the first part, we have equality in the DPI if and only $$\Kale{\qof{\W \given \Y..., \x...}}{\pof{\W \given \Y..., \x...}}=0$$.
@@ -902,7 +897,7 @@ A better name for the functional 🥬 divergence and function-space variational 
 To me, functions are an abstract thing, and determining how to assign a prior or even a distribution to them sounds difficult and complex, adding an air of mystique for me, whereas predictions are something we can easily understand and relate to.
 </aside>
 
-## Equivalence Classes
+### Equivalence Classes
 
 Unless there are other considerations, it makes sense to use priors that assign the same density to parameters that are equivalent. 
 Hence, for a given function $$\fof{\x ; \w}$$, which determines the likelihood $$\pof{\y \given \x, \w} \triangleq \pof{y \given \fof{\x ; \w}}$$, we can define an equivalence relation such that $$\w \sim \w'$$ if and only if $$\fof{\x; \w} = \fof{\x; \w'}$$ *for all* $$\x$$. 
@@ -939,7 +934,7 @@ has the same predictions within the domain $$\x \in (0, 1)$$ while being differe
 </aside>
 
 
-## Consistency
+### Consistency
 
 Importantly, this definition is consistent with Bayesian inference:
 
@@ -985,7 +980,7 @@ This is not a special property of the equivalence class mapping but a general pr
 Above proof is valid for any function $$\fof{\cdot}$$ applied to a random variable.
 </aside>
 
-## Equality & Symmetries
+### Equality & Symmetries
 
 We can view $$[\w]$$ as a projection from $$\w$$ to its equivalence class $$[\w]$$. The DPI then gives us:
 
@@ -1034,7 +1029,7 @@ Finally, $$\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1
 
 So, if $$\opq$$ only had support in a single period for example, the difference between $$\Kale{\qof{\W}}{\pof{\W}}$$ and $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ would be $$\log N$$, capturing the redundancy.
 
-## Predictive Prior
+### Predictive Prior
 
 How does the predictive prior term fit into this? The DPI again yields the answer:
 
@@ -1070,7 +1065,7 @@ $$
 \end{align}
 $$
 
-# Parameter Priors vs Predictive Priors
+## Parameter Priors vs. Predictive Priors
 
 What is the advantage of this all?
 
@@ -1080,7 +1075,7 @@ With function priors, that is predictive priors, we can induce more meaningful p
 
 Given that these priors are difficult to express explicitly though, using the DPI to obtain a functional ELBO can be an easier way to express and approximate them.
 
-## Label Entropy Regularization
+### Label Entropy Regularization
 
 Applied to the functional ELBO, we can gain a new perspective on label entropy regularization.
 
@@ -1109,7 +1104,7 @@ This is the same as an MLE minimization objective with an additional entropy reg
 
 Thus, in the simplest approximation, the DPI and functional variational inference give us a new perspective on label entropy regularization.
 
-## Knowledge Distillation
+### Knowledge Distillation
 
 Obviously, assuming non-uniform prior predictions, $$\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)<d-cite key="hinton2015distilling"></d-cite>.
 
@@ -1117,10 +1112,12 @@ The main difference is that knowledge distillation is using the reverse KL diver
 
 Only that we are not distilling the knowledge from a teacher model but from the prior that we downweigh while also training our model on the data itself.
 
-# Conclusion
+## Conclusion
 
-In summary, the data processing inequality provides an elegant perspective on why optimizing the variational posterior in function-space can be an effective inference strategy. 
-This basic tool from information theory has helped us with a very simple deduction of a modern Bayesian deep learning method. 
+In this blog post, we have explored the data processing inequality and its applications in information theory and Bayesian deep learning. We have looked at its meaning and intuitions for it in detail and have derived related versions.
+
+In particular, we have seen that the data processing inequality provides an elegant perspective on why optimizing the variational posterior in function-space can be an effective inference strategy. 
+Thus, this basic tool from information theory has helped us with a very simple deduction of this modern Bayesian deep learning method. It is reassuring that fundamental principles prove their enduring ability to explain recent advances.
 
 While recovering the results in their full generality is beyond the scope of this post, we were able to derive several interesting results from the literature in simplified form (or at least provide strong intuitions and motivation for them). 
 
@@ -1128,4 +1125,6 @@ Further, we gained intuition for the relationship between parameter and predicti
 
 Most importantly, we have looked at equivalence classes based on the predictions and pointed out how the *predictive* prior divergences approximate this functional 🥬 divergence between equivalence classes and not the usual parameter-based 🥬 divergences. 
 
-Lastly, we have seen that the DPI can be used to derive a new perspective on label entropy regularization, which is a commonly used regularization technique in deep learning.
+Lastly, we have seen that the DPI can be used to derive a new perspective on label entropy regularization, which is a commonly used regularization technique in deep learning, and point out how it differs from knowledge distillation.
+
+
