--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -33,17 +33,44 @@ bibliography: 2024-05-07-dpi-fsvi.bib
 #     for hyperlinks within the post to work correctly. 
 #   - please use this format rather than manually creating a markdown table of contents.
 toc:
-  - name: Equations
-  - name: Images and Figures
+  - name: Introduction
+  - name: "Background: Information-Theoretic Notation"
+  - name: Data Processing Inequality
     subsections:
-    - name: Interactive Figures
-  - name: Citations
-  - name: Footnotes
-  - name: Code Blocks
-  - name: Diagrams
-  - name: Tweets
-  - name: Layouts
-  - name: Other Typography?
+      - name: "Example: Image Processing Pipeline"
+      - name: "Example: Supervised Learning"
+      - name: "Example: Autoencoders"
+      - name: "Proof of the DPI"
+  - name: "🥬 Data Processing Inequality"
+    subsections:
+      - name: "Example: Comparing Image Distributions"
+      - name: "Counter-Example: Bayesian Inference"
+      - name: "Proofs of the 🥬 DPI"
+      - name: Overall Statement
+  - name: "Other Data Processing Inequalities"
+    subsections:
+      - name: "Jensen-Shannon Divergence"
+      - name: "JSD-DPI"
+      - name: "Mutual Information"
+  - name: "Function-Space Variational Inference"  
+    subsections:
+      - name: "Problem Setting & Notation"
+      - name: "Chain Rule of the 🥬 Divergence & DPI"
+      - name: "Deriving the Functional ELBO"
+      - name: "Choosing the \"Coreset\" $$x...$$"
+      - name: "Application to Continual Learning"
+  - name: Comparison to FSVI in the Literature
+  - name: The Equality Case and Equivalence Classes
+    subsections:
+      - name: "Equivalence Classes"
+      - name: "Consistency"
+      - name: "Equality & Symmetries"
+      - name: "Predictive Prior"
+  - name: "Parameter Priors vs. Predictive Priors"
+    subsections:
+      - name: "Label Entropy Regularization"
+      - name: "Knowledge Distillation"
+  - name: Conclusion
 
 # Below is an example of injecting additional post-specific styles.
 # This is used in the 'Layouts' section of this post.
@@ -206,7 +233,7 @@ The following sections summarize the key takeaways of this blog post. If they do
 
 #### Data Processing Inequality
 
-The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will look at different data processing inequalities that relate different distributions instead of different random variables. However, the blog posts in particular looks at the DPI when formulated using Kullback-Leibler divergences (🥬) between distributions.
+The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will look at different data processing inequalities that relate different distributions instead of different random variables. However, the blog posts in particular looks at the DPI when formulated using Kullback-Leibler (KL/🥬) divergences between distributions.
 
 Concretely, this DPI states that processing data stochastically can only reduce information. More formally:
 
@@ -790,7 +817,7 @@ $$
 
 is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational Bayesian neural networks*" by Sun et al. (2019)<d-cite key="sun2019functional"></d-cite>---with caveats that we discuss below.
 
-### Choosing the "coreset" $$\x...$$
+### Choosing the "Coreset" $$\x...$$
 
 One important detail is the question of how to choose the $$\x...$$:
 
